# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.2.5] 2017 02-19
## changed
previous toy simulator produce many zero fields, now using cavaty with larger
values

changed 

## [0.2.4] 2017-02-18
### added
- openfoam added and communicate with catalyst using ds_adapptor
- code minor reorgnized


## [0.2.3.3] 2017-02-01
### updated
- no linked with static catalyst (not  stand alone) library
- two jobs:
	bigred.job:simu_gen-consumer-analysit
	catalyst: simu_gen-> catatalyst to files


## [0.2.3.2] -2017-01-27
### changed
- ds_adator will take over all ds operations in simulator and catalyst
- now ds_server is also dynamically linked

### note
1. alocation outside loop
- free outside the loop



## [0.2.3.1] -2017-01-25
### Added
- now dspaces can complied with catalyst
### changed
- add extern C in common_utility.h
### note
1. alocation outside loop
- free outside the loop

## [0.2.3] - 2017-01-24
### Added 
- new branch: with visual, add catalyst part and corresponding dspaces acess.

### target
- at least output some pictures

### to do
- only rank=1 is supported, becase attributes->update is originally designed
with parallel support
- add remote server in co-process

## [0.2.2] - 2017-01-23
### Added
- new build dir: build_sim_consumer
### bugs
- resource unavailable


## [0.2.1] - 2017-01-23
### Added
- add consumer, simulator to build
- add vel data dspaces dim define

### Changed
- move binary path into build tree
- move region_def(fill, extract) to region_def.c
- changed simulator app id to 1

## [0.2.0] - 2017-01-20
### Added
- cmake build

### Added
- paraview GUI is used to visualize clustering result and real dataflow

### Changed
-  dspace opertion in get_regions.c is splited into seperate functions

...

## [0.1.x] -2017-1-xx
### Finished
- add dataspaces support