@@ -15,7 +15,7 @@ FoamFile
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
-nu              [0 2 -1 0 0 0 0] 0.5;
+nu              [0 2 -1 0 0 0 0] 0.01;
 
 
 // ************************************************************************* //
