@@ -14,8 +14,8 @@ FoamFile
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
-//convertToMeters 0.1;
-convertToMeters 1;
+convertToMeters 0.1;
+//convertToMeters 1;
 
 vertices
 (
@@ -31,8 +31,9 @@ vertices
 
 blocks
 (
-//    hex (0 1 2 3 4 5 6 7) (20 20 1) simpleGrading (1 1 1)
-      hex (0 1 2 3 4 5 6 7) (201 201 1) simpleGrading (1 1 1)
+    //hex (0 1 2 3 4 5 6 7) (20 20 1) simpleGrading (1 1 1)
+    hex (0 1 2 3 4 5 6 7) (40 40 1) simpleGrading (1 1 1)
+//      hex (0 1 2 3 4 5 6 7) (201 201 1) simpleGrading (1 1 1)
 );
 
 edges
